# agentic-csa

./: .gitignore  PUBLISHING.md  README.md  config.json  copilot-instructions.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp-registry.yml  publish.yml  release.yml
scripts/: build_index.py
src/wpilib_mcp/: __init__.py  plugin_loader.py  server.py  tool_router.py
src/wpilib_mcp/plugins/: __init__.py  base.py
src/wpilib_mcp/plugins/ctre/: __init__.py  build_index.py  plugin.py
src/wpilib_mcp/plugins/ctre/data/: index.json
src/wpilib_mcp/plugins/photonvision/: __init__.py  build_index.py  plugin.py
src/wpilib_mcp/plugins/photonvision/data/: index.json
src/wpilib_mcp/plugins/redux/: __init__.py  build_index.py  plugin.py
src/wpilib_mcp/plugins/redux/data/: index.json
src/wpilib_mcp/plugins/rev/: __init__.py  build_index.py  plugin.py
src/wpilib_mcp/plugins/rev/data/: index.json
src/wpilib_mcp/plugins/wpilib/: __init__.py  build_index.py  plugin.py
src/wpilib_mcp/plugins/wpilib/data/: index_2025.json  index_stable.json
src/wpilib_mcp/utils/: __init__.py  fetch.py  html.py  indexer.py  search.py
tests/: __init__.py  test_plugins.py  test_search.py
